<resources>
    <string name="app_name">JetpackExampleKotlin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="waiting_for_data">Waiting for data</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>

    <string name="input_fields_empty">One or more fields were empty. Please fill them out.</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="your_account">Your Account</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up_below">No account? Sign up below:</string>
    <string name="repeat_password">Repeat password</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="full_name">Full name</string>
    <string name="postal_adress">Postal adress</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign up!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password_does_not_match">The password and the repeated password does not match</string>


    <string name="user_signed_in_success">User successfully logged in</string>
    <string name="user_registration_success">User registered!</string>
    <string name="user_signed_in_failure">User could not be logged in</string>
    <string name="user_registration_failure">User registration failurere</string>
    <string name="account">Account</string>
    <string name="about_text">This is an about page, which will be all about what this app is and can do...</string>

</resources>