<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.pondar.jetpackexamplekotlin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/aboutAction"
            app:destination="@id/nav_about" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="org.pondar.jetpackexamplekotlin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
    android:id="@+id/nav_slideshow"
    android:name="org.pondar.jetpackexamplekotlin.ui.slideshow.SlideshowFragment"
    android:label="@string/menu_slideshow"
    tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_account"
        android:name="org.pondar.jetpackexamplekotlin.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account"
        app:startDestination="@id/action_nav_account_to_loggedInFragment">
        <action
            android:id="@+id/action_nav_account_to_loggedInFragment"
            app:destination="@id/nav_loggedInFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_loggedInFragment"
        android:name="org.pondar.jetpackexamplekotlin.ui.loggedin.LoggedInFragment"
        android:label="logged_in_fragment"
        tools:layout="@layout/logged_in_fragment" >
        <argument
            android:name="user"
            app:argType="org.pondar.jetpackexamplekotlin.models.User" />
    </fragment>
    <fragment
        android:id="@+id/nav_about"
        android:name="org.pondar.jetpackexamplekotlin.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" >
        <argument
            android:name="aboutArgument"
            app:argType="string"
            android:defaultValue="SendingStuff" />
    </fragment>
</navigation>